--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
             <div class="projeto">
                 <a href="https://leandrosousa007.github.io/gymRat/" target="_blank">
-                    <img src="./image/gym.png" alt="Imagem do Projeto 1">
+                    <img src="./image/se.png" alt="Imagem do Projeto 1">
                 </a>
                 <div class="projeto-content">
 
@@ -323,7 +323,7 @@
                     <p>Projeto sobre Ocorrências Disciplinares dos Alunos, onde há o controle dos alunos, ocorrencias, escolas realizados por meio do banco de dados.</p>
                     <p><strong>Tecnologias Utilizadas: </strong> </p>
                     <p>Html, CSS, JavaScript, Java, SQL, SpringBoot</p>
-                    <a href="https://leandrosousa007.github.io/gymRat/" target="_blank">Acessar site</a>
+                    <a href="https://github.com/leandrosousa007/projetoIntegrador" target="_blank">Acessar projeto</a>
                 </div>
             </div>
 
