--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="imagex/png" href="">
+    <link rel="shortcut icon" type="imagex/png" href="./image/leandro.jpg">
 
     <!-- Link da Fonte -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
