--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">Leandro Evaristo</a>
                     <a href="#" data-activates="menu-mobile" class="button-collapse">
-                        <i class="material-icons">menu</i>
+                        <img src="./image/icow.png" class="icow">
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="#principal">Principal</a>
