--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             </div>
 
             <div class="projeto">
-                <a href="https://link-para-o-projeto1.com" target="_blank">
+                <a href="./image/TartaMat.apk" target="_blank">
                     <img src="./image/tarta.jpg" alt="Imagem do Projeto 4">
                 </a>
                 <div class="projeto-content">
@@ -315,7 +315,7 @@
             </div>
 
             <div class="projeto">
-                <a href="https://leandrosousa007.github.io/gymRat/" target="_blank">
+                <a href="https://github.com/leandrosousa007/projetoIntegrador/tree/main/SocietyEducationFinal" target="_blank">
                     <img src="./image/se.png" alt="Imagem do Projeto 5">
                 </a>
                 <div class="projeto-content">
@@ -324,7 +324,7 @@
                         realizados por meio de banco de dados.</p>
                     <p><strong>Tecnologias Utilizadas: </strong></p>
                     <p>Html, CSS, JavaScript, Java, SQL, SpringBoot</p>
-                    <a href="https://leandrosousa007.github.io/gymRat/" target="_blank">Acessar site</a>
+                    <a href="https://github.com/leandrosousa007/projetoIntegrador/tree/main/SocietyEducationFinal" target="_blank">Acessar site</a>
                 </div>
             </div>
 
